RESOLVED FIXED25141
Chromium build failure from r42377
https://bugs.webkit.org/show_bug.cgi?id=25141
Summary Chromium build failure from r42377
Pam Greene (IRC:pamg)
Reported 2009-04-10 17:40:49 PDT
http://trac.webkit.org/changeset/42377 renamed methods, breaking the Chromium build.
Attachments
Build fixes for V8 (1.80 KB, patch)
2009-04-10 17:44 PDT, Pam Greene (IRC:pamg)
fishd: review+
Pam Greene (IRC:pamg)
Comment 1 2009-04-10 17:44:35 PDT
Created attachment 29414 [details] Build fixes for V8
Pam Greene (IRC:pamg)
Comment 2 2009-04-13 11:02:17 PDT
Landed in r42444.
Note You need to log in before you can comment on or make changes to this bug.