third_party/WebKit/WebCore/bindings/v8/ScheduledAction.cpp
@@ -107,7 +107,7 @@ void ScheduledAction::execute(ScriptExecutionContext* context)
         proxy->evaluate(m_code, 0);
 
     if (context->isDocument())
-        static_cast<Document*>(context)->updateRendering();
+        static_cast<Document*>(context)->updateStyleIfNeeded();
 
     proxy->setTimerCallback(false);
 }
