third_party/WebKit/WebCore/bindings/v8/V8AbstractEventListener.cpp
@@ -134,7 +134,7 @@ void V8AbstractEventListener::handleEvent(Event* event, bool isWindowEvent)
 
     invokeEventHandler(context, event, jsEvent, isWindowEvent);
 
-    Document::updateDocumentsRendering();
+    Document::updateStyleForAllDocuments();
 }
 
 void V8AbstractEventListener::disposeListenerObject()
